--- a/StoreEnvironmentVariables/envvari.properties
+++ b/StoreEnvironmentVariables/envvari.properties
@@ -1,5 +1,3 @@
 #Environment variables
-#Mon Sep 04 15:59:15 CEST 2017
-lars=janssen
-niels=janssen
-koen=janssen
+#Wed Sep 13 11:31:54 CEST 2017
+alex=kir
